--- a/sao-paulo.html
+++ b/sao-paulo.html
@@ -2,7 +2,7 @@
 <html lang='pt-BR'>
   <head>
     <meta charset='UTF-8'>
-    <title>O que eu mais gosto em Sâo Paulo</title>
+    <title>O que eu mais gosto em São Paulo</title>
     <link rel='stylesheet' href='normalize.css'>
     <link rel='stylesheet' href='estilo.css'>
     <script src='prefixfree.min.js'></script>
@@ -16,17 +16,14 @@
         <img src='images/paulista.jpg' alt='O céu da avenida Paulista,
         foto por http://www.flickr.com/photos/jairo_abud'>
         <p>
-            Um	dos	principais	centros	financeiros	da	cidade,	a	avenida	
-            Paulista	também	possui	diversas	opções	de	entretenimento.	
-            Endereço	do	Museu	de	Arte	de	São	Paulo,	<em>MASP</em>,	do	
-            Teatro	Gazeta	e	muitos	outros,	a	região	é	de	fácil	acesso	
-            graças	às	diversas	linhas	de	ônibus	que	cruzam	a	avenida	e
-            à	linha	de	metrô	que	passa	por	baixo	dela.
+            Um dos principais centros financeiros	da cidade, a avenida Paulista também possui diversas 
+            opções de entretenimento. Endereço do Museu de Arte de São Paulo, <em>MASP</em>, do 
+            Teatro Gazeta e muitos outros, a região é de fácil acesso graças às diversas linhas de ônibus	
+            que cruzam a avenida e à linha de metrô que passa por baixo dela.
         </p>
         <p>
-            A	Avenida	Paulista	sempre	é	assunto.	O	que	será	que	estão	
-            falando	a	respeito	no	<a href='https://twitter.com/search/Avenida	Paulista'
-            target='_blank'>Twitter</a>?
+            A Avenida Paulista sempre é assunto. O que será que estão falando a respeito no 
+            <a href='https://twitter.com/search/Avenida	Paulista' target='_blank'>Twitter</a>?
         </p>
         <div class='clear'></div>
         </div>
@@ -35,27 +32,25 @@
         <img src='images/piola.jpg' alt='A varanda do Armazém Piola,
         foto por Fernando Moraes'>
         <p>
-            Depois	de	um	dia	de	trabalho,	nada	melhor	do	que	um	bom	chopp,
-            um	petisco	e	uma	conversa	em	uma	mesa	de	bar.	Opções	de	sobra
-            na	região	das	ruas	Aspicuelta,	Fradique	Coutinho	e	Wisard.
+            Depois de um dia de trabalho, nada melhor do que um bom	chopp, um petisco e uma	conversa 
+            em uma mesa de bar. Opções de sobra na região das ruas Aspicuelta, Fradique Coutinho e Wisard.
         </p>
         <p>
-            Veja	quais	os	melhores	bares	e	restaurantes	da	região	no
+            Veja quais os	melhores bares e restaurantes da região no
             <a href='http://bit.ly/bares-vila' target='_blank'>
-                Guia	da	VEJA	São	Paulo.
+                Guia da VEJA São Paulo.
             </a>
         </p>
         <div class='clear'></div>
         </div>
         <div class='place'>
         <h2>O parque do Ibirapuera</h2>
-        <img src='images/ibirapuera.jpg' alt='O	Parque	do	Ibirapuera,
+        <img src='images/ibirapuera.jpg' alt='O Parque do Ibirapuera, 
         por	http://www.flickr.com/photos/soldon/'>
         <p>
-            Um	dos	cartões	postais	da	cidade,	o	parque	dispõe	de	mais	
-            de	1,5	km²	de	área	verde,	lagos	artificiais	e	pistas	de	cooper
-            e	ciclismo.	E	se	isso	não	fosse	o	suficiente,	o	parque	costuma
-            ser	palco	de	diversos	eventos	culturais	ao	longo	do	ano.
+            Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km² de	área verde, 
+            lagos artificiais e pistas de cooper e ciclismo. E se isso não fosse o suficiente, o 
+            parque costuma ser palco de diversos eventos culturais ao longo do ano.
         </p>
         <p>
             Veja no 
@@ -72,8 +67,8 @@
             <li>A sala São Paulo.</li>
             <li>Os estádios dos principais times de	futebol	da cidade.</li>
             <li>
-                Diversos museus, como o	Memorial da	América	Latina,
-				Museu da Língua	Portuguesa e o Museu do Ipiranga.
+                Diversos museus, como o	Memorial da	América	Latina, Museu da Língua	Portuguesa e 
+                o Museu do Ipiranga.
             </li>
             <li>E mais!</li>
         </ol>
