--- a/sao-paulo.html
+++ b/sao-paulo.html
@@ -1,82 +1,82 @@
 <!doctype html>
 <html lang='pt-BR'>
-  <head>
-    <meta charset='UTF-8'>
-    <title>O que eu mais gosto em São Paulo</title>
-    <link rel='stylesheet' href='normalize.css'>
-    <link rel='stylesheet' href='estilo.css'>
-    <script src='prefixfree.min.js'></script>
-  </head>
-  <body>
-    <div class='container'>
-      <h1><a href=''>O que eu mais gosto em São Paulo</a></h1>
-      <div class='places'>
-        <div class='place'>
+
+<head>
+  <meta charset='UTF-8'>
+  <title>O que eu mais gosto em São Paulo</title>
+  <link rel='stylesheet' href='normalize.css'>
+  <link rel='stylesheet' href='estilo.css'>
+  <script src='prefixfree.min.js'></script>
+</head>
+
+<body>
+  <div class='container'>
+    <h1><a href=''>O que eu mais gosto em São Paulo</a></h1>
+    <div class='places'>
+      <article>
         <h2>Passear na Avenida Paulista!</h2>
         <img src='images/paulista.jpg' alt='O céu da avenida Paulista,
         foto por http://www.flickr.com/photos/jairo_abud'>
         <p>
-            Um dos principais centros financeiros	da cidade, a avenida Paulista também possui diversas 
-            opções de entretenimento. Endereço do Museu de Arte de São Paulo, <em>MASP</em>, do 
-            Teatro Gazeta e muitos outros, a região é de fácil acesso graças às diversas linhas de ônibus	
-            que cruzam a avenida e à linha de metrô que passa por baixo dela.
+          Um dos principais centros financeiros da cidade, a avenida Paulista também possui diversas
+          opções de entretenimento. Endereço do Museu de Arte de São Paulo, <em>MASP</em>, do
+          Teatro Gazeta e muitos outros, a região é de fácil acesso graças às diversas linhas de ônibus
+          que cruzam a avenida e à linha de metrô que passa por baixo dela.
         </p>
         <p>
-            A Avenida Paulista sempre é assunto. O que será que estão falando a respeito no 
-            <a href='https://twitter.com/search/Avenida	Paulista' target='_blank'>Twitter</a>?
+          A Avenida Paulista sempre é assunto. O que será que estão falando a respeito no
+          <a href='https://twitter.com/search/Avenida	Paulista' target='_blank'>Twitter</a>?
         </p>
-        <div class='clear'></div>
-        </div>
-        <div class='place'>
+      </article>
+      <article>
         <h2>Os bares da Vila Madalena</h2>
         <img src='images/piola.jpg' alt='A varanda do Armazém Piola,
         foto por Fernando Moraes'>
         <p>
-            Depois de um dia de trabalho, nada melhor do que um bom	chopp, um petisco e uma	conversa 
-            em uma mesa de bar. Opções de sobra na região das ruas Aspicuelta, Fradique Coutinho e Wisard.
+          Depois de um dia de trabalho, nada melhor do que um bom chopp, um petisco e uma conversa
+          em uma mesa de bar. Opções de sobra na região das ruas Aspicuelta, Fradique Coutinho e Wisard.
         </p>
         <p>
-            Veja quais os	melhores bares e restaurantes da região no
-            <a href='http://bit.ly/bares-vila' target='_blank'>
-                Guia da VEJA São Paulo.
-            </a>
+          Veja quais os melhores bares e restaurantes da região no
+          <a href='http://bit.ly/bares-vila' target='_blank'>
+            Guia da VEJA São Paulo.
+          </a>
         </p>
-        <div class='clear'></div>
-        </div>
-        <div class='place'>
+      </article>
+      <article>
         <h2>O parque do Ibirapuera</h2>
         <img src='images/ibirapuera.jpg' alt='O Parque do Ibirapuera, 
         por	http://www.flickr.com/photos/soldon/'>
         <p>
-            Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km² de	área verde, 
-            lagos artificiais e pistas de cooper e ciclismo. E se isso não fosse o suficiente, o 
-            parque costuma ser palco de diversos eventos culturais ao longo do ano.
+          Um dos cartões postais da cidade, o parque dispõe de mais de 1,5 km² de área verde,
+          lagos artificiais e pistas de cooper e ciclismo. E se isso não fosse o suficiente, o
+          parque costuma ser palco de diversos eventos culturais ao longo do ano.
         </p>
         <p>
-            Veja no 
-            <a href='http://goo.gl/maps/HoH8' target='_blank'>mapa</a>
-            como chegar ao parque.
+          Veja no
+          <a href='http://goo.gl/maps/HoH8' target='_blank'>mapa</a>
+          como chegar ao parque.
         </p>
-        <div class='clear'></div>
-        </div>
-      </div>
-      <div class='sidenote'>
-        <h3>E existem muitos outros	lugares	interessantes na cidade...</h3>
-        <ol>
-            <li>O Mercado Municipal.</li>
-            <li>A sala São Paulo.</li>
-            <li>Os estádios dos principais times de	futebol	da cidade.</li>
-            <li>
-                Diversos museus, como o	Memorial da	América	Latina, Museu da Língua	Portuguesa e 
-                o Museu do Ipiranga.
-            </li>
-            <li>E mais!</li>
-        </ol>
-      </div>
-      <div class='footer clear'>
-        <p>Parte do	livro "HTML5 e CSS3: Domine	a web do futuro."</p>
-      </div>
+      </article>
     </div>
-    <script src='jquery.min.js'></script>
-  </body>
+    <aside>
+      <h3>E existem muitos outros lugares interessantes na cidade...</h3>
+      <ol>
+        <li>O Mercado Municipal.</li>
+        <li>A sala São Paulo.</li>
+        <li>Os estádios dos principais times de futebol da cidade.</li>
+        <li>
+          Diversos museus, como o Memorial da América Latina, Museu da Língua Portuguesa e
+          o Museu do Ipiranga.
+        </li>
+        <li>E mais!</li>
+      </ol>
+    </aside>
+    <footer class = 'clear'>
+      <p>Parte do livro "HTML5 e CSS3: Domine a web do futuro."</p>
+    </footer>
+  </div>
+  <script src='jquery.min.js'></script>
+</body>
+
 </html>
